# esp32-lcdkit-isv2rs-servo-controller

./: .gitignore  CMakeLists.txt  LICENSE  README-zh_CN.md  README.md  sdkconfig  sdkconfig.defaults
.github/workflows/: build.yml
main/: CMakeLists.txt  app_main.c
main/servo/: isv2rs6040.c  isv2rs6040.h  servo_audio.c  servo_audio.h  servo_config.c  servo_config.h  servo_led.c  servo_led.h
main/ui/: ui_servo.h  ui_servo_main.c  ui_servo_menu.c
main/ui/fonts/: font_SourceHanSansCN_20.c  font_SourceHanSansCN_Medium_22.c  font_servo_cn_20.c  font_servo_cn_22.c  font_wqy_20.c  font_wqy_22.c
main/ui/layer_manage/: lv_example_image.h  lv_example_pub.h  lv_schedule_basic.c  lv_schedule_basic.h
